# atoi

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  bench.cpp
include/jsteemann/: atoi.h
tests/: CMakeLists.txt  tests.cpp
